syntax = "proto3";

package user;

// User Service Definition
service UserService {
  // RPC method to get a list of users
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  // RPC method to get a single user by ID
  rpc GetUserById (GetUserByIdRequest) returns (User);
}

// Request message for GetUsers
// For now, it's empty, but we can add pagination fields (skip, limit) later if needed.
message GetUsersRequest {}

// Response message for GetUsers, corresponding to the RootObject interface
message GetUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 skip = 3;
  int32 limit = 4;
}

// Request message for GetUserById
message GetUserByIdRequest {
  int32 id = 1;
}

// Message definitions for nested structures, based on TypeScript interfaces

message Coordinates {
  double lat = 1;
  double lng = 2;
}

message Address {
  string address = 1;
  string city = 2;
  string state = 3;
  string stateCode = 4;
  string postalCode = 5;
  Coordinates coordinates = 6;
  string country = 7;
}

message Hair {
  string color = 1;
  string type = 2;
}

message Bank {
  string cardExpire = 1;
  string cardNumber = 2;
  string cardType = 3;
  string currency = 4;
  string iban = 5;
}

message Company {
  string department = 1;
  string name = 2;
  string title = 3;
  Address address = 4; // Nested Address message
}

message Crypto {
  string coin = 1;
  string wallet = 2;
  string network = 3;
}

// User message, corresponding to the User interface
message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string maidenName = 4;
  int32 age = 5;
  string gender = 6;
  string email = 7;
  string phone = 8;
  string username = 9;
  string password = 10; // Note: Exposing password via API is generally not recommended
  string birthDate = 11;
  string image = 12;
  string bloodGroup = 13;
  double height = 14;
  double weight = 15;
  string eyeColor = 16;
  Hair hair = 17;
  string ip = 18;
  Address address = 19;
  string macAddress = 20;
  string university = 21;
  Bank bank = 22;
  Company company = 23;
  string ein = 24;
  string ssn = 25;
  string userAgent = 26;
  Crypto crypto = 27;
  string role = 28;
}
